<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>



    <groupId>com.baize.flux</groupId>
    <artifactId>baize-flux</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>

    <name>Baize Flux</name>


    <properties>
        <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
        <maven-assembly-plugin.version>3.3.0</maven-assembly-plugin.version>
        <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
        <maven-javadoc-plugin.version>2.10.3</maven-javadoc-plugin.version>
        <maven-source-plugin.version>2.4</maven-source-plugin.version>
        <maven-surefire-plugin.version>3.0.0-M6</maven-surefire-plugin.version>
        <maven-dependency-plugin.version>3.1.1</maven-dependency-plugin.version>
        <maven-shade-plugin.version>3.2.1</maven-shade-plugin.version>
        <maven.compiler.release>8</maven.compiler.release>
        <junit.version>4.13.2</junit.version>
        <java.version>8</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <file_encoding>UTF-8</file_encoding>

        <auto-service.version>1.0.1</auto-service.version>
        <lombok.version>1.18.42</lombok.version>
        <typesafe.version>1.4.3</typesafe.version>
        <jsqlparser.version>4.9</jsqlparser.version>

  
    </properties>

    <modules>
        <module>baize-flux-common</module>
        <module>baize-flux-framework</module>
        <module>baize-flux-launcher</module>
        <module>baize-flux-bom</module>
        <module>baize-flux-api</module>
        <module>baize-flux-connectors</module>
    </modules>

   
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven-compiler-plugin.version}</version>
                    <configuration>
                        <release>${maven.compiler.release}</release>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

</project>
